--- a/HW2/hw2_ans.tex
+++ b/HW2/hw2_ans.tex
@@ -32,9 +32,9 @@ Slope of line formed by $p_1,p_2$ is
 \begin{align}
 \frac{x_2-x_1}{y_2-y_1} &= \frac{\frac{f X_2}{Z_2}-\frac{f X_1}{Z_1}}{\frac{f Y_2}{Z_2}-\frac{f Y_1}{Z_1}} \\ 
  &= \frac{X_2 Z_1 - X_1 Z_2}{Y_2 Z_1 - Y_1 Z_2} \\ 
- &= \frac{(kZ_2-l)Z_1 - (kZ_1-l)Z_2}{(mZ_2-n)Z_1 - (mZ_1-n)Z_2}\\
- &= \frac{l(Z_2-Z_1)}{n(Z_1-Z_2)}\\
- &= \frac{l}{n}
+ &= \frac{k(Z_2-l)Z_1 - k(Z_1-l)Z_2}{m(Z_2-n)Z_1 - m(Z_1-n)Z_2}\\
+ &= \frac{kl(Z_2-Z_1)}{mn(Z_1-Z_2)}\\
+ &= \frac{kl}{mn}
 \end{align}
 which depends only on parameters of the line implying that slope of $p_2,p_3$ will be same and $p_1,p_2,p_3$ are collinear if $P_1,P_2,P_3$ are collinear.
 
