--- a/HW2/hw2_ans.tex
+++ b/HW2/hw2_ans.tex
@@ -109,6 +109,36 @@ v_{k,l} &= \bar{v}_{k,l} - \dfrac{I_{y;k,l} (I_{x;k,l} \bar{u}_{k,l} + I_{y;k,l}
 \end{itemize}
 
 \item You know that both the Horn-Shunck as well as Lucas-Kanade methods bank on the brightness constancy assumption. Given a pair of images, let us suppose that this assumption holds good for most physically corresponding pixels, but not for some $p \%$ of the pixels. Briefly explain how you will modify the Horn-Shunck method and Lucas-Kanade method to deal with this. \textsf{[4 points]}
+\begin{itemize}
+\item[Ans.] One alternative is to use $\mathcal{L}_1$ norm instead of $\mathcal{L}_2$ norm, so as to allow for more outliers. In this scheme, 
+\begin{description}
+\item[Horn-Shunck] will minimise the following cost function:\begin{multline}
+J(\{(u_{i,j},v_{i,j})\}) = \sum\limits_{i=1}^N \sum\limits_{j=1}^N |I_{x;i,j} u_{i,j} + I_{y;i,j} v_{i,j} + I_{t;i,j} | \\
++ \lambda ((u_{i,j+1} - u_{i,j})^2 + (u_{i+1,j} - u_{i,j})^2 + (v_{i,j+1} - v_{i,j})^2 + (v_{i+1,j} - v_{i,j})^2)
+\end{multline}
+
+\item[Lucas-Kanade] will solve the following optimization problem for each window
+\[
+\min \| Au - b\|_1
+\]
+where $A$ and $b$ are defined as in standard Lucas-Kanade method.
+\end{description}
+
+Another alternative is to use M-estimator type of function discussed in the class for penalising brightness constancy equation.
+Let $f(x) = \sum_i \rho(x_i)$ where $\rho(x_i) = x_i^2$ if $|x_i|<T$ and $T^2$ otherwise. In this case, each of the methods will look like following:
+\begin{description}
+\item[Horn-Shunck] will minimise the following cost function:\begin{multline}
+J(\{(u_{i,j},v_{i,j})\}) = \sum\limits_{i=1}^N \sum\limits_{j=1}^N f(I_{x;i,j} u_{i,j} + I_{y;i,j} v_{i,j} + I_{t;i,j}) \\
++ \lambda ((u_{i,j+1} - u_{i,j})^2 + (u_{i+1,j} - u_{i,j})^2 + (v_{i,j+1} - v_{i,j})^2 + (v_{i+1,j} - v_{i,j})^2)
+\end{multline}
+
+\item[Lucas-Kanade] will solve the following optimization problem for each window
+\[
+\min f( Au - b)
+\]
+\end{description}
+
+\end{itemize}
 
 \item In this assignment, you will build up on the previous assignment to estimate the homography between two images. This time, you should use the RanSaC algorithm to estimate the homography in order to make the estimate resistant to the presence of incorrect point correspondences. The code for RanSaC for various problems including estimation of homographies is available at \url{http://www.csse.uwa.edu.au/~pk/research/matlabfns/}. You should work with the images in the folder \url{http:\\www.cse.iitb.ac.in/~ajitvr/CS763_Spring2015/HW2/Homography} and also on any one pair of pictures of an approximately planar scene taken with a real camera. (You should acquire these images yourself and make sure they have small non-overlapping areas to make this more interesting.) Also, in each case, you should warp one of the images so that it aligns with the other one. However, this time you should \emph{not} crop the image so that no parts of either image are deleted, and a true mosaic may be obtained. While you should use the RanSaC code as is, I recommend stepping through it to get a feel for what is going on inside. Display all the resulting mosaics in your report. State the number of iterations and all thresholds you used. \textsf{[5 points]}
 \begin{itemize}
@@ -150,7 +180,10 @@ v_{k,l} &= \bar{v}_{k,l} - \dfrac{I_{y;k,l} (I_{x;k,l} \bar{u}_{k,l} + I_{y;k,l}
 \item Here we will register a flash and a no-flash image pair using the joint entropy criterion we studied in class. Download the flash and no-flash images from \url{http:\\www.cse.iitb.ac.in/~ajitvr/CS763_Spring2015/HW2/ImageReg}. Convert both images to \sout{color} gray-scale. The flash image and the no-flash image have different image intensities at many places, and the no-flash image is distinctly noisier. Rotate the given no-flash image counter-clockwise by 28.5 degrees, translate it by -6 pixels in the X direction, and add Gaussian noise of standard deviation 5 (on a 0-255 scale). Note that the rotation must be applied about the center of the image. Set negative-valued pixels to 0 and pixels with value more than 255 to 255. Now perform a brute-force search to find the angle $\theta$ and translation $t_x$ to optimally align the modified no-flash image with the flash image, so as to minimize the joint entropy. The range for $\theta$ is between -60 and +60 in steps of 1 degree, and the range for $t_x$ should be between -12 and +12 in steps of 1. Compute the joint entropy using a bin-size of 10 for both intensities. Plot the joint entropy as a function of $\theta$ and $t_x$ using the surf and imshow commands of MATLAB. Also, determine a scenario where the images are obviously misaligned but the joint entropy is (falsely and undesirably) lower than the `true' minimum. Again, display the joint entropy as mentioned before. Include all plots in your report. \textsf{[7 points]} 
 \begin{itemize}
 \item[Ans.]
-Please refer to figure 4 for relevant plots.
+Please refer to figure 4 for relevant plots. Original Translation= -6\newline Original Rotation=$28.5^0$.
+The minimum joint entropy point is $(t_x,\theta)=(6,-28)$.
+
+When the translation is large, we don't get proper minimal joint entropy as there's little overlap between the two figures, As an example shown in the figure 4, we've rotated image by $28.5^0$ and translateed by $-100$ pixels and the plotted joint entropy. We notice that the minimum joint entropy on boundary points while it is supposed to occur at $100,-28^0$.
 \begin{figure}[!htb]
     \centering
     \subfloat[Original Image]{\includegraphics[width=2.5in]{1_Original.jpg}}%
@@ -162,7 +195,6 @@ Please refer to figure 4 for relevant plots.
 	\subfloat[Joint Entropy surface plot]{{\includegraphics[width=5in]{surf.jpg} }}%
 	\qquad
 	\subfloat[Misaligned surface plot]{{\includegraphics[width=5in]{surf_bad.jpg} }}%
-
 	\caption{}
 \end{figure}
 
